--- a/css/landing.css
+++ b/css/landing.css
@@ -455,8 +455,12 @@ p{
     margin-bottom: 2px;
     color:whitesmoke;
   }
-  .email{
-    padding-top:37px;
+  .name{
+    padding-top:30px;
+    padding-bottom:10px;
+  }
+  .pno{
+    padding-top:10px;
   }
   .right form .msg{
     margin-top: 10px;
@@ -495,7 +499,7 @@ p{
   }
   .bottom center{
     padding: 5px;
-    margin-top: 30px;
+    margin-top: 40px;
     font-size: 0.9375rem;
     background: #151515;
   }
