--- a/css/landing.css
+++ b/css/landing.css
@@ -99,6 +99,9 @@ nav img{
     font-weight: bold;   
 }
 @media(max-width: 700px){
+  html, body {
+    overflow-x: hidden;
+    }
     #logo{
         padding-top:10px;
     }
