--- a/css/landing.css
+++ b/css/landing.css
@@ -119,7 +119,7 @@ nav img{
         display: block;
     }
     .navLinks{
-        position: absolute;
+        position:fixed;
         background:rgb(0, 0, 0);
         height: 100vh;
         width: 200px;
