--- a/css/landing.css
+++ b/css/landing.css
@@ -56,6 +56,9 @@ nav img{
 .navLinks ul li a:hover::after{
     width: 100%;
 }
+nav .fa{
+  display: none;
+}
 .textBox{
     width: 90%;
     color: white;
@@ -126,7 +129,7 @@ nav img{
         top: 0px;
         right: -300px;
         z-index:5;
-        text-align: left;
+        text-align: left !important;
         transition: 1s;
     }
     .navLinks{
@@ -142,6 +145,9 @@ nav img{
         background: transparent;
         position: relative;
         cursor:pointer;
+    }
+    .navLinks ul{
+      padding-left: 10px !important;
     }
     .navLinks ul li a::after{
         content:'';
@@ -171,7 +177,8 @@ nav img{
     padding-top: 80px;
     background-color: rgb(0, 0, 0);
     overflow: hidden;
-    background: radial-gradient(ellipse at bottom,#110505 0%,#000000);
+    /* background: radial-gradient(ellipse at bottom,#110505 0%,#000000); */
+    background:#000000;
 }
 h1{
     font-size: 40px;
@@ -190,7 +197,7 @@ p{
 .course p1{
     color: rgb(190, 189, 189);
 }
-.row{
+.row1{
     margin: 10%;
     display: flex !important;
     justify-content: space-between;
@@ -283,7 +290,7 @@ p{
     .course-column{
         flex-basis: 300px;
     }
-    .row{
+    .row1{
         flex-direction: column;
     }
     .row2{
@@ -456,10 +463,10 @@ p{
   .right form input{
     height: 35px;
   }
-  .right form .btn{
+  .right form .btnX{
     margin-top: 20px;
   }
-  .right form .btn button{
+  .right form .btnX button{
     height: 40px;
     width: 30%;
     border: none;
@@ -470,7 +477,7 @@ p{
     cursor: pointer;
     transition: .3s;
   }
-  .right form .btn button:hover{
+  .right form .btnX button:hover{
     background: rgb(212, 255, 18);
     color: black;
   }
@@ -490,7 +497,7 @@ p{
   .bottom center a:hover{
     text-decoration: underline;
   }
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 700px) {
     footer{
       position: relative;
       bottom: 0px;
